[gd_scene load_steps=11 format=3 uid="uid://b4xhbl5uucb8w"]

[ext_resource type="Script" path="res://MatchEnded.gd" id="1_jtun2"]
[ext_resource type="Texture2D" uid="uid://chmer5cy006qn" path="res://Assets/1722768097209.jpg" id="2_3ud4m"]
[ext_resource type="FontFile" uid="uid://cug67l2gwtw6a" path="res://Assets/LuckiestGuy-Regular.ttf" id="3_4e7ck"]
[ext_resource type="Texture2D" uid="uid://bjf8tgwxqvxd2" path="res://Assets/Checkmark.png" id="4_m85k6"]
[ext_resource type="Texture2D" uid="uid://c2vwumi46r8oj" path="res://Assets/GreenWin.png" id="5_vsqee"]
[ext_resource type="Texture2D" uid="uid://cw566ko6ugkqs" path="res://Assets/DrawPeace.png" id="6_81guk"]
[ext_resource type="PackedScene" uid="uid://d0if6xsux6bv4" path="res://button_pressed_audio.tscn" id="7_t33nh"]
[ext_resource type="PackedScene" uid="uid://c44dwnxl4uhuc" path="res://Scenes/Buttons/next_button.tscn" id="8_hiw2v"]
[ext_resource type="Script" path="res://Scenes/Buttons/continue1v1.gd" id="9_55e6s"]

[sub_resource type="LabelSettings" id="LabelSettings_7fodv"]
font = ExtResource("3_4e7ck")
font_size = 85
font_color = Color(0.509804, 0.741176, 1, 1)
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[node name="MatchEnded" type="Node2D"]
z_index = 3
script = ExtResource("1_jtun2")

[node name="Box" type="Sprite2D" parent="."]
position = Vector2(9.5, 5.99999)
scale = Vector2(0.99359, 0.930403)
texture = ExtResource("2_3ud4m")

[node name="Results" type="Label" parent="."]
offset_left = -495.0
offset_top = -273.0
offset_right = 509.0
offset_bottom = -187.0
text = "results: YOU LOST!"
label_settings = SubResource("LabelSettings_7fodv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LostPhoto" type="Sprite2D" parent="."]
visible = false
position = Vector2(10, 6)
scale = Vector2(1.26638, 1.12963)
texture = ExtResource("4_m85k6")

[node name="WinPhoto" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 59)
texture = ExtResource("5_vsqee")

[node name="DrawPhoto" type="Sprite2D" parent="."]
position = Vector2(-20, -2)
scale = Vector2(1.23647, 1.1453)
texture = ExtResource("6_81guk")

[node name="ButtonPressedAudio" parent="." instance=ExtResource("7_t33nh")]

[node name="NextButton" parent="." instance=ExtResource("8_hiw2v")]
position = Vector2(11, 304)
script = ExtResource("9_55e6s")
